2004-09-29 17:38  dynamite

	* doc/: .cvsignore, libadplug.texi: Updated documentation.

2004-09-28 20:37  dynamite

	* src/adplug.dsp, src/kemuopl.h, src/lds.cpp, test/loudness.ref:
	Updated loudness test reference file.

2004-09-27 22:38  dynamite

	* src/lds.h: Forgot to save, woops.

2004-09-27 22:37  dynamite

	* INSTALL, README, src/lds.cpp, src/lds.h: Finalized loudness
	player! yeah!

2004-09-03 20:43  dynamite

	* AUTHORS, BUGS, TODO: Updated some docs.

2004-09-03 15:05  dynamite

	* INSTALL.win32, Makefile.bt, Makefile.wat, README, TODO,
	src/Makefile.bt, src/adplug.dsp, src/d00.cpp, src/lds.cpp,
	src/lds.h, src/s3m.cpp: DOS/Windows fixes.

2004-09-03 13:45  dynamite

	* test/: ice_thnk.sci, loudness.lds, mi2.laa: Fixed test-suite.

2004-09-03 13:18  dynamite

	* test/Makefile.bt: Added Watcom Makefile

2004-09-03 13:16  dynamite

	* test/loudness.lds: [no log message]

2004-09-03 13:07  dynamite

	* test/: 2001.ref, ADAGIO.ref, ALLOYRUN.ref, ARAB.ref, BEGIN.ref,
	BOOTUP.ref, CHILD1.ref, DTM-TRK1.ref, HIP_D.ref, MARIO.ref,
	PLAYMUS1.ref, REVELAT.ref, SAILOR.ref, SCALES.ref, SMKEREM.ref,
	SONG1.ref, TOCCATA.ref, TUBES.ref, loudness.lds, playertest.cpp,
	TU_BLESS.ref, VIB_VOL3.ref, 2001.MKJ.ref, ADAGIO.DFM.ref,
	WONDERIN.ref, adlibsp.ref, bmf1_2.ref, fdance03.ref, flash.ref,
	hybrid.ref, hyp.ref, ice_thnk.ref, inc.ref, loudness.ref, mi2.ref,
	michaeld.ref, playertest.dsp, psi1.ref, rat.ref, samurai.ref,
	ALLOYRUN.RAD.ref, ARAB.BAM.ref, BEGIN.KSM.ref, BOOTUP.M.ref,
	CHILD1.XSM.ref, DTM-TRK1.DTM.ref, HIP_D.ROL.ref, MARIO.A2M.ref,
	PLAYMUS1.SNG.ref, REVELAT.SNG.ref, SAILOR.CFF.ref, SCALES.SA2.ref,
	SMKEREM.HSC.ref, SONG1.sng.ref, TOCCATA.MAD.ref, TUBES.SAT.ref,
	TU_BLESS.AMD.ref, VIB_VOL3.D00.ref, WONDERIN.IMF.ref,
	adlibsp.s3m.ref, bmf1_2.xad.ref, fdance03.dmo.ref, flash.xad.ref,
	hybrid.xad.ref, hyp.xad.ref, ice_think.sci, ice_think.sci.ref,
	inc.raw.ref, loudness.lds.ref, mi2_big_tree1.laa,